--- a/produtos/templates/ver_produto.html
+++ b/produtos/templates/ver_produto.html
@@ -9,5 +9,20 @@
 </head>
 <body>
     <h1>ola  tudo bem</h1>
+    <img src="{% static 'produtos/img/images.jpg' %}" alt="Imagem do naruto">
+    <form action="{% url 'ver_produtos' %}" method="POST">{% csrf_token %}
+        
+        <input type="text" name="nome" placeholder="Digite seu nome">
+        <br>
+        <br>
+        <input type="number" name="idade" placeholder="Digite sua idade">
+        <br>
+        <br>
+        <input type="submit" value="Enviar">
+        
+        
+
+    </form>
+ 
 </body>
 </html>
